@@ -1,3 +1,4 @@
+- fixed another bug in ball reflection (2024/04/14 MS)
 - properly read windows files in preview and editor (2024/04/14 MS)
 
 1.1.7:
